# template_fastapi

./: README.md  fastapi_service.py  pyproject.toml
